# kuma-game-engine

./: .gitignore  .gitmodules
documents/: 01_기술_검토.md  02_그래픽스_추상화_및_C샵_래퍼_검토.md  03_프로젝트_설정_OpenGL_시작.md  04_CMake_문법_가이드.md  05_OpenGL_라이브러리_생태계.md  06_GLFW_서브모듈_검토.md  07_GLFW_학습_자료.md  08_엔진_코드_구조_설계.md
kuma-game-engine/: .clang-format  CMakeLists.txt
kuma-game-engine/sources/: main.cpp  main.h
kuma-game-engine/sources/core/app/: KApplication.cpp  KApplication.h
kuma-game-engine/sources/data/: KJsonWrapper.cpp  KJsonWrapper.h
kuma-game-engine/sources/platform/window/: KWindow.cpp  KWindow.h
kuma-game-engine/sources/renderer/: KRenderer.cpp  KRenderer.h
kuma-game-engine/sources/rhi/opengl/: KGLContext.cpp  KGLContext.h
